aws/projects/Project-004-Phonebook-Application/cfn-template-PHONE.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    Cloudformation template for milliseconds converter application. This app runs on application load balancer and is controlled by autoscaling groups. 
Parameters:
  MyVPC:
    Description: VPC Id of your existing account
    Type: AWS::EC2::VPC::Id
  Subnets:
    Type: List<AWS::EC2::Subnet::Id>
  

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP (80) for ALB
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for App from ALB
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
  
  WebServerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties: 
      LaunchTemplateData: 
        ImageId: ami-0742b4e673072066f
        InstanceType: t2.micro
        KeyName: Firstkey
        SecurityGroupIds: 
          - !GetAtt WebServerSecurityGroup.GroupId
        TagSpecifications: 
          - ResourceType: instance
            Tags: 
              - Key: Name
                Value: !Sub Web Server of ${AWS::StackName} 
        UserData: 
          Fn::Base64: !Sub  
           - | 
            #! /bin/bash
            
            yum update -y
            yum install python3 -y
            pip3 install flask
            URL=${YunusEndpointURL}
            FOLDER="https://raw.githubusercontent.com/YunusStar/aws-devops/main/aws/projects/Project-004-Phonebook-Application/"
            curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L $FOLDER/templates/index.html
            curl -s --create-dirs -o "/home/ec2-user/templates/result.html" -L $FOLDER/templates/delete.html
            curl -s --create-dirs -o "/home/ec2-user/templates/result.html" -L $FOLDER/templates/app-update.html
            curl -s --create-dirs -o "/home/ec2-user/phonebook-app.py" -L $FOLDER/phonebook-app.py
            echo URL > /home/ec2-user/dbserver.endpoint 
            python3 /home/ec2-user/phonebook-app.py
           - {YunusEndpointURL : !GetAtt RDSinstance.Endpoint.Address} 
  RDSinstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: '30'
      DBInstanceClass: db.t2.micro #required
      MasterUsername: admin
      MasterUserPassword: Serdar_1
      Engine: MySQL
      EngineVersion: 8.0.19
      DBName: clarusway_phonebook
      PubliclyAccessible: true
      StorageType: gp2
    DeletionPolicy: Delete
     
  WebServerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: instance
      VpcId: !Ref MyVPC  # You can use ---> !GetAtt WebServerSecurityGroup.VpcId 
  
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt ALBSecurityGroup.GroupId
      Subnets: !Ref Subnets
      Type: application
  
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: #required
        - TargetGroupArn: !Ref WebServerTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ApplicationLoadBalancer #required
      Port: 80
      Protocol: HTTP
  
  WebServerASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs ""
      DesiredCapacity: '2'
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref WebServerLaunchTemplate
        Version: !GetAtt WebServerLaunchTemplate.LatestVersionNumber
      MaxSize: '3' #required
      MinSize: '1' #required
      TargetGroupARNs:
        - !Ref WebServerTargetGroup
      Cooldown: '1000'


Outputs:
  WebsiteURL:
    Description: Milliseconds Converter Application Load Balancer URL
    Value: !Sub 
      - http://${ALBaddress}
      - ALBaddress: !GetAtt ApplicationLoadBalancer.DNSName
